# environmental-quality-ml-dashboard

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
app/: app.py  app_v1.py  app_v2.py  style.css  style_v1.css  style_v2.cc
artifacts/metrics/: deep_metrics.json  stats_summary.json  supervised_metrics.json  unsupervised_metrics.json
artifacts/reports/: final_report.html
artifacts/tables/: cluster_summary.csv  model_comparison.csv
configs/: models.yaml  project.yaml  thresholds.yaml
docs/: ARCHITECTURE.md  DEPLOY.md  MODEL_CARD.md  TROUBLESHOOTING.md
scripts/: build_report.py  fetch_data.py  run_app.py  train_all.py
src/business/: threshold_analysis.py
src/data/: clean.py  ingest.py  split.py
src/features/: engineer.py  preprocessing.py
src/models/: deep_learning.py  evaluation.py  supervised.py  unsupervised.py
src/stats/: descriptive.py  diagnostics.py  hypothesis.py
src/utils/: io.py  logging.py  plotting.py
stitch/advanced_ml_models_&_clustering/: code.html
stitch/deep_learning_environmental_risks_1/: code.html
stitch/deep_learning_environmental_risks_2/: code.html
stitch/environmental_analysis__descriptive_stats_1/: code.html
stitch/environmental_analysis__descriptive_stats_2/: code.html
stitch/environmental_data_science_dashboard/: code.html
stitch/supervised_learning_analysis/: code.html
stitch/supervised_learning_performance_1/: code.html
stitch/supervised_learning_performance_2/: code.html
stitch/unsupervised_pattern_discovery_1/: code.html
stitch/unsupervised_pattern_discovery_2/: code.html
tests/: test_clean.py  test_descriptive.py  test_evaluation.py  test_features.py  test_ingest.py  test_io_utils.py  test_pipeline_smoke.py  test_split.py
