[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "air-quality-ml-dashboard"
version = "1.0.0"
description = "Air Quality Risk Modeling & Environmental Pattern Analysis"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<2",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "streamlit>=1.28",
    "pyarrow>=14.0",
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["artifacts", "data", "docs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",  # line-length is enforced by formatter; allow long strings/URLs in code
]

[tool.ruff.lint.per-file-ignores]
# Scripts and the Streamlit entry point inject the repo root onto sys.path
# before importing internal modules; ruff's E402 doesn't account for that.
"scripts/**" = ["E402"]
"app/**" = ["E402"]

[tool.pytest.ini_options]
markers = [
    "slow: marks integration/smoke tests that exercise the full pipeline (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
